[gd_scene load_steps=3 format=3 uid="uid://qnh0hk1jdbnw"]

[ext_resource type="Script" path="res://scripts/GachaMachine.gd" id="1_bu8qy"]
[ext_resource type="Script" path="res://scripts/BallCanvas.gd" id="2_cadym"]

[node name="GachaMachine" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_bu8qy")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="MachinePanel" type="Panel" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(560, 420)
layout_mode = 2

[node name="MachineBody" type="ColorRect" parent="CenterContainer/VBoxContainer/MachinePanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.227451, 0.227451, 0.227451, 1)

[node name="Balls2D" type="Node2D" parent="CenterContainer/VBoxContainer/MachinePanel"]

[node name="ChutePos" type="Marker2D" parent="CenterContainer/VBoxContainer/MachinePanel"]
position = Vector2(30, 30)

[node name="BallCanvas" type="Control" parent="CenterContainer/VBoxContainer/MachinePanel"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_cadym")

[node name="HintLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Insert 100 coins and SPIN!
"
